--- a/package.json
+++ b/package.json
@@ -13,14 +13,11 @@
     "eslint": "^7.13.0",
     "eslint-config-htmlacademy": "0.6.0",
     "webpack": "4.44.2",
+    "webpack-cli": "^3.3.12",
     "webpack-dev-server": "^3.11.0"
   },
   "engines": {
     "node": "10"
   },
-  "dependencies": {
-    "css-loader": "^5.0.1",
-    "style-loader": "^2.0.0",
-    "webpack-cli": "^3.3.12"
-  }
+  "dependencies": {}
 }
