--- a/package.json
+++ b/package.json
@@ -10,11 +10,11 @@
     "start": "webpack-dev-server --open"
   },
   "devDependencies": {
-    "eslint": "^7.13.0",
+    "eslint": "7.13.0",
     "eslint-config-htmlacademy": "0.6.0",
     "webpack": "4.44.2",
-    "webpack-cli": "^3.3.12",
-    "webpack-dev-server": "^3.11.0"
+    "webpack-cli": "3.3.12",
+    "webpack-dev-server": "3.11.0"
   },
   "engines": {
     "node": "10"
