--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "devDependencies": {
     "chart.js": "2.9.4",
     "chartjs-plugin-datalabels": "0.7.0",
+    "dayjs": "1.9.5",
     "eslint": "7.13.0",
     "eslint-config-htmlacademy": "0.6.0",
     "he": "1.2.0",
@@ -22,7 +23,5 @@
   "engines": {
     "node": "10"
   },
-  "dependencies": {
-    "dayjs": "^1.9.5"
-  }
+  "dependencies": {}
 }
